--- a/gradle/dependency.versions.toml
+++ b/gradle/dependency.versions.toml
@@ -7,37 +7,25 @@ koinCompose = "1.1.0"
 moko-mvvm = "0.16.1"
 kotlinx-datetime = "0.5.0"
 coroutines = "1.8.0-RC2"
-ktor = "2.3.7"
+ktor = "2.3.10"
 kermit = "2.0.2"
 koin = "3.5.3"
 precomposeKoin = "1.5.10"
+sqlDelight = "2.0.1"
+composeWebviewMultiplatform = "1.8.8"
 [libraries]
-androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose" }
-kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-moko-mvvm = { module = "dev.icerock.moko:mvvm-compose", version.ref = "moko-mvvm" }
-kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
-kotlinx-coroutines = {module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref="coroutines"}
-#####    network
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
-ktor-client-okhttp = {module = "io.ktor:ktor-client-android", version.ref = "ktor"}
-ktor-client-core = {module = "io.ktor:ktor-client-core", version.ref = "ktor"}
-ktor-client-content-negotiation = {module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor"}
-ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
-ktor-client-java = {module = "io.ktor:ktor-client-java", version.ref = "ktor"}
-ktor-client-serialization = {module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor"}
-ktor-client-logging = {module = "io.ktor:ktor-client-logging", version.ref = "ktor"}
-
-kermit = {module = "co.touchlab:kermit", version.ref = "kermit"}
-
-koin-android = {group = "io.insert-koin", name = "koin-android", version.ref="koin"}
-koin-core = {group = "io.insert-koin", name = "koin-core", version.ref="koin"}
-koin-core-coroutine = {module = "io.insert-koin:koin-core-coroutines", version.ref="koin"}
-
-precompose-koin = { module = "moe.tlaster:precompose-koin", version.ref = "precomposeKoin" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 
 
+compose-webview-multiplatform = { module = "io.github.kevinnzou:compose-webview-multiplatform", version.ref = "composeWebviewMultiplatform" }
 [plugins]
-
 buildkonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildkonfig" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
+android-maps-secrets = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version = "2.0.1" }
